【Feat】【耗时统计】优化插件插桩逻辑

--- a/app_java/src/main/res/layout/activity_main.xml
+++ b/app_java/src/main/res/layout/activity_main.xml
@@ -17,4 +17,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="第二个" />
+    <Button
+        android:id="@+id/btn3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="retrofit" />
 </LinearLayout>
